--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Carrega configuracoes do Firebase antes do script principal -->
+    <script src="config.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -824,15 +826,7 @@
     </div>
 
     <script>
-        // Configuração do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyDgg5jnDEypyXsAxgqFHDZQzK3rpLY3nU8",
-            authDomain: "plataforma-de-vendas-a87c2.firebaseapp.com",
-            projectId: "plataforma-de-vendas-a87c2",
-            storageBucket: "plataforma-de-vendas-a87c2.firebasestorage.app",
-            messagingSenderId: "177158177496",
-            appId: "1:177158177496:web:88d1c178147e7e91064dad"
-        };
+        // Configuração do Firebase em arquivo externo config.js
 
         // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
