--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Carrega configuracoes do Firebase antes do script principal -->
     <script src="config.js"></script>
+    <script src="main.js"></script> <!-- ou seu script inline -->
+    
     <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet">
     <style>
         * {
