--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script src="vendor/firebase/firebase-storage-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Carrega configuracoes do Firebase antes do script principal -->
-    <script src="config.js"></script>
-    <script src="main.js"></script> <!-- ou seu script inline -->
-    
+       
     <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -739,6 +737,8 @@
         .notification.info { background: var(--primary); }
     </style>
 </head>
+     <script src="config.js"></script>
+    <script src="main.js"></script>
 <body>
     <!-- Login Page -->
     <div id="loginPage" class="login-container">
