--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plataforma Embalagens Conceito</title>
    <!-- Firebase SDKs -->
-  <script src="vendor/firebase/firebase-app-compat.js"></script>
-  <script src="vendor/firebase/firebase-auth-compat.js"></script>
-  <script src="vendor/firebase/firebase-firestore-compat.js"></script>
-  <script src="vendor/firebase/firebase-storage-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
+
     <!-- Carrega configuracoes do Firebase antes do script principal -->
        
     <!-- Seus estilos -->
