--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </button>
             </div>
             
-            <nav class="nav-menu">
+            <nav class="nav-menu" id="navMenu"></nav>
                 <a href="#" class="nav-item" data-page="dashboard">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
