--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </button>
             </div>
             
-            <nav class="nav-menu" id="navMenu"></nav>
+            <nav class="nav-menu">
                 <a href="#" class="nav-item" data-page="dashboard">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
@@ -89,7 +89,7 @@
                     <i class="fas fa-user"></i>
                     <span>Perfil</span>
                 </a>
-                <a href="#" class="nav-item" data-page="admin" id="adminNav">
+                <a href="#" class="nav-item" data-page="admin">
                     <i class="fas fa-cog"></i>
                     <span>Admin</span>
                 </a>
