--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <!-- Carrega configuracoes do Firebase antes do script principal -->
        
     <!-- Seus estilos -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
-   
+  <link rel="stylesheet" href="dist/styles.css" />
 </head>
 <body>
   
