--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Carrega configuracoes do Firebase antes do script principal -->
        
     <!-- Seus estilos -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="dist/styles.css" />
 </head>
 <body>
   
