--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </button>
             </div>
             
-            <nav id="navMenu" class="nav-menu">
+            <nav class="nav-menu">
                 <a href="#" class="nav-item" data-page="dashboard">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
@@ -178,6 +178,45 @@
                 <button type="submit" class="btn btn-primary">Salvar</button>
             </form>
         </div>
+    </div>
+
+    <div id="newUserModal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
+      <div class="glass-card w-full max-w-lg mx-4 relative">
+        <!-- Botão fechar -->
+        <button id="closeNewUserModal" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800">&times;</button>
+        <h2 class="text-2xl font-semibold mb-4">Adicionar Novo Usuário</h2>
+        <form id="newUserForm" class="space-y-4">
+          <!-- Nome -->
+          <div>
+            <label for="newUserName" class="block text-sm font-medium">Nome</label>
+            <input type="text" id="newUserName" class="form-input mt-1 w-full" required>
+          </div>
+          <!-- Email -->
+          <div>
+            <label for="newUserEmail" class="block text-sm font-medium">Email</label>
+            <input type="email" id="newUserEmail" class="form-input mt-1 w-full" required>
+          </div>
+          <!-- Senha -->
+          <div>
+            <label for="newUserPassword" class="block text-sm font-medium">Senha</label>
+            <input type="password" id="newUserPassword" class="form-input mt-1 w-full" required>
+          </div>
+          <!-- Nível de Acesso -->
+          <div>
+            <label for="newUserRole" class="block text-sm font-medium">Nível de Acesso</label>
+            <select id="newUserRole" class="form-input mt-1 w-full">
+              <option value="USER_VIEWER">Visualizador</option>
+              <option value="USER_EDITOR">Editor</option>
+              <option value="USER_ADMIN">Administrador</option>
+            </select>
+          </div>
+          <!-- Botões Ações -->
+          <div class="flex justify-end space-x-2">
+            <button type="button" id="cancelNewUser" class="btn-secondary px-4 py-2">Cancelar</button>
+            <button type="submit" class="btn-primary px-4 py-2">Criar Usuário</button>
+          </div>
+        </form>
+      </div>
     </div>
  <script src="config.js"></script>
 <script src="main.js"></script>
