--- a/index.html
+++ b/index.html
@@ -127,24 +127,6 @@
                         <i class="fas fa-bell"></i>
                         <span class="notification-badge">3</span>
                     </button>
-
-                    <!-- ↓ botão de Novo Usuário, agora dentro do header ↓ -->
-                    <button
-                      id="btnNewUser"
-                      class="btn-primary flex items-center space-x-2"
-                      type="button"
-                    >
-                      <i class="fas fa-user-plus"></i>
-                      <span>Novo Usuário</span>
-                    </button>
-                    <button
-                      id="btnNewCampaign"
-                      class="btn-secondary flex items-center space-x-2 ml-2"
-                      type="button"
-                    >
-                      <i class="fas fa-bullhorn"></i>
-                      <span>Nova Campanha</span>
-                    </button>
                 </div>
             </header>
             
@@ -154,6 +136,7 @@
         </div>
     </div> <!-- mainApp -->
 
+    <!-- Novo Usuário Modal -->
     <div id="newUserModal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
       <div class="glass-card w-full max-w-lg mx-4 relative p-6">
         <button id="closeNewUserModal" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800">&times;</button>
