--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-functions-compat.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Carrega configuracoes do Firebase antes do script principal -->
